2009-08-12
	* BE: Remember the selected function and sub module for each page seperate.
	  Now you don't have to select the function "Event data" or "Common data"
	  according to the content of the selected page when you switch between pages.
	  The last selection is restored when you select a page.

2009-08-11
	* Many changes to fit the TYPO3 coding guide lines.

2009-08-09
	* BE: Fixed missing field values when add new speaker restriction after saving
	  a speaker restriction using the saveDocNew button.

2009-08-08
	* Update documentation with new layout template.

2008-11-23
	* Version 1.1.17
	* FE: When the event is in the past and no presentation handouts are available
	  then show a message about missing handouts.
	* Raise the maximum document size for presentations from 5000kB to 10000kB.

2008-10-14
	* Version 1.1.16
	* BE: New function to update the names of timeslots.
	* BE: New format of time slot names when editing time slots.
	* BE: Show room number in room list and show order by room number.
	* BE: Fixed wrong end time when creating new speaker restriction record.

2008-10-12
	* FE: Fixed wrong sort order of room in time slot view.
	* FE: Fix wrong width of time slot if one slot in a row is missing.
	
2008-10-03
	* Version 1.1.15
	* BE: Added form to create many time slots when no time slots are defined
	  for an event.

2008-09-10
	* Version 1.1.14
	* BE: Fixed SQL error when creating new session.
	* BE: Fixed missing short category name in sessionlist when no sub pages exist.
	* BE: Fixed SQL error when creating a session or speaker translation.

2008-07-28
	* In the presentation titmetable it is possible to cut the title
	  after a given length and add "..." to the title text.
	* In the marker section SLOTSALL a new marker SLOTSPEAKER for 
	  displaying the names of the speakers is added.

2008-07-26
	* Fixed errors when creating the first session, time slot or 
	  speaker restriction records and no event record was created before.
	  
2008-02-11