@@ -3,6 +3,7 @@
 	  Now you don't have to select the function "Event data" or "Common data"
 	  according to the content of the selected page when you switch between pages.
 	  The last selection is restored when you select a page.
+	* Caching is now on per default and can be disabled via TS setting.
 
 2009-08-11
 	* Many changes to fit the TYPO3 coding guide lines.
